Enhance grid and list views with improved styling and layout adjustments

--- a/app/components/grid-view.hbs
+++ b/app/components/grid-view.hbs
@@ -23,7 +23,7 @@
                 <AuLinkExternal
                   @disabled={{not item.url}}
                   href={{item.url}}
-                  class="au-u-h3 {{unless item.url 'no-link'}}"
+                  class="au-u-h3 au-u-medium {{unless item.url 'no-link'}}"
                 >
                   {{#if (eq item.valueType "number")}}
                     {{format-number item.value 0}}
@@ -59,7 +59,7 @@
                 <AuLinkExternal
                   @disabled={{not item.url}}
                   href={{item.url}}
-                  class="au-u-h3 {{unless item.url 'no-link'}}"
+                  class="au-u-h3 au-u-medium {{unless item.url 'no-link'}}"
                 >
                   {{#if (eq item.valueType "number")}}
                     {{format-number item.value 0}}
@@ -97,7 +97,7 @@
                 <AuLinkExternal
                   @disabled={{not item.url}}
                   href={{item.url}}
-                  class="au-u-h3 {{unless item.url 'no-link'}}"
+                  class="au-u-h3 au-u-medium {{unless item.url 'no-link'}}"
                 >
                   {{#if (eq item.valueType "number")}}
                     {{format-number item.value 0}}
@@ -134,7 +134,7 @@
                 <AuLinkExternal
                   @disabled={{not item.url}}
                   href={{item.url}}
-                  class="au-u-h3 {{unless item.url 'no-link'}}"
+                  class="au-u-h3 au-u-medium {{unless item.url 'no-link'}}"
                 >
                   {{#if (eq item.valueType "number")}}
                     {{format-number item.value 0}}
@@ -180,7 +180,7 @@
                 <AuLinkExternal
                   @disabled={{not item.url}}
                   href={{item.url}}
-                  class="au-u-h3 {{unless item.url 'no-link'}}"
+                  class="au-u-h3 au-u-medium {{unless item.url 'no-link'}}"
                 >
                   {{#if (eq item.valueType "number")}}
                     {{format-number item.value 0}}
