--- a/app/components/list-view.hbs
+++ b/app/components/list-view.hbs
@@ -4,6 +4,7 @@
   @noDataMessage="Geen gegevens gevonden"
   @sort={{this.sort}}
   @isLoading={{@isLoading}}
+  class="au-u-background-gray-100"
   as |t|
 >
   <t.content as |c|>
