Enhance OrgReportRoute to include additional classification labels and improve decision aggregation logic based on session group classification

--- a/app/components/filters/date-range-filter.hbs
+++ b/app/components/filters/date-range-filter.hbs
@@ -57,3 +57,6 @@
     </Filters::DateRangeFilter::ToggleButton>
   </div>
 {{/if}}
+<AuButton @skin="link" type="reset" {{on "click" this.resetFilters}}>
+  Herstel alle filters
+</AuButton>
