--- a/app/templates/home/org.hbs
+++ b/app/templates/home/org.hbs
@@ -103,7 +103,10 @@
           @endQueryParam="eind"
           @start={{this.plannedStartMin}}
           @end={{this.plannedStartMax}}
+          @startValue={{this.begin}}
+          @endValue={{this.eind}}
         />
+
       </div>
       <div class="c-interface__sidebar-footer">
         <ReportWrongData />
