Add Playwright testing framework and implement initial tests for org-report route functionality

--- a/app/templates/home/org.hbs
+++ b/app/templates/home/org.hbs
@@ -55,6 +55,7 @@
           @name="'view-toggle'"
           @checked={{this.checked}}
           @onChange={{this.handleToggle}}
+          data-test-toggle-switch=""
         >Lijstweergave</AuToggleSwitch>
       </div>
 
