--- a/app/templates/home/org.hbs
+++ b/app/templates/home/org.hbs
@@ -96,11 +96,11 @@
         <h3 class="au-u-h4 au-u-medium">Filters</h3>
         <Filters::DateRangeFilter
           @startQueryParam="begin"
-          @endQueryParam="eind"
+          @endQueryParam="datum"
           @start={{this.plannedStartMin}}
           @end={{this.plannedStartMax}}
           @startValue={{this.begin}}
-          @endValue={{this.eind}}
+          @endValue={{this.datum}}
         />
 
       </div>
